Created Flask Web app

--- a/notebook/EDA_Student _Performance.ipynb
+++ b/notebook/EDA_Student _Performance.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,13 +75,13 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>gender</th>\n",
-       "      <th>race/ethnicity</th>\n",
-       "      <th>parental level of education</th>\n",
+       "      <th>race_ethnicity</th>\n",
+       "      <th>parental_level_of_education</th>\n",
        "      <th>lunch</th>\n",
-       "      <th>test preparation course</th>\n",
-       "      <th>math score</th>\n",
-       "      <th>reading score</th>\n",
-       "      <th>writing score</th>\n",
+       "      <th>test_preparation_course</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>writing_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -145,14 +145,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   gender race/ethnicity parental level of education         lunch  \\\n",
+       "   gender race_ethnicity parental_level_of_education         lunch  \\\n",
        "0  female        group B           bachelor's degree      standard   \n",
        "1  female        group C                some college      standard   \n",
        "2  female        group B             master's degree      standard   \n",
        "3    male        group A          associate's degree  free/reduced   \n",
        "4    male        group C                some college      standard   \n",
        "\n",
-       "  test preparation course  math score  reading score  writing score  \n",
+       "  test_preparation_course  math_score  reading_score  writing_score  \n",
        "0                    none          72             72             74  \n",
        "1               completed          69             90             88  \n",
        "2                    none          90             95             93  \n",
@@ -160,7 +160,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "(1000, 8)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,24 +204,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "gender                         0\n",
-       "race/ethnicity                 0\n",
-       "parental level of education    0\n",
+       "race_ethnicity                 0\n",
+       "parental_level_of_education    0\n",
        "lunch                          0\n",
-       "test preparation course        0\n",
-       "math score                     0\n",
-       "reading score                  0\n",
-       "writing score                  0\n",
+       "test_preparation_course        0\n",
+       "math_score                     0\n",
+       "reading_score                  0\n",
+       "writing_score                  0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -281,13 +281,13 @@
       " #   Column                       Non-Null Count  Dtype \n",
       "---  ------                       --------------  ----- \n",
       " 0   gender                       1000 non-null   object\n",
-      " 1   race/ethnicity               1000 non-null   object\n",
-      " 2   parental level of education  1000 non-null   object\n",
+      " 1   race_ethnicity               1000 non-null   object\n",
+      " 2   parental_level_of_education  1000 non-null   object\n",
       " 3   lunch                        1000 non-null   object\n",
-      " 4   test preparation course      1000 non-null   object\n",
-      " 5   math score                   1000 non-null   int64 \n",
-      " 6   reading score                1000 non-null   int64 \n",
-      " 7   writing score                1000 non-null   int64 \n",
+      " 4   test_preparation_course      1000 non-null   object\n",
+      " 5   math_score                   1000 non-null   int64 \n",
+      " 6   reading_score                1000 non-null   int64 \n",
+      " 7   writing_score                1000 non-null   int64 \n",
       "dtypes: int64(3), object(5)\n",
       "memory usage: 62.6+ KB\n"
      ]
@@ -300,24 +300,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "gender                          2\n",
-       "race/ethnicity                  5\n",
-       "parental level of education     6\n",
+       "race_ethnicity                  5\n",
+       "parental_level_of_education     6\n",
        "lunch                           2\n",
-       "test preparation course         2\n",
-       "math score                     81\n",
-       "reading score                  72\n",
-       "writing score                  77\n",
+       "test_preparation_course         2\n",
+       "math_score                     81\n",
+       "reading_score                  72\n",
+       "writing_score                  77\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -353,9 +353,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>math score</th>\n",
-       "      <th>reading score</th>\n",
-       "      <th>writing score</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>writing_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -412,7 +412,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       math score  reading score  writing score\n",
+       "       math_score  reading_score  writing_score\n",
        "count  1000.00000    1000.000000    1000.000000\n",
        "mean     66.08900      69.169000      68.054000\n",
        "std      15.16308      14.600192      15.195657\n",
@@ -423,7 +423,7 @@
        "max     100.00000     100.000000     100.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -480,12 +480,12 @@
    ],
    "source": [
     "print(\"Categories in race variable:  \", end=\" \")\n",
-    "print(df['race/ethnicity'].unique())"
+    "print(df['race_ethnicity'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -499,12 +499,12 @@
    ],
    "source": [
     "print(\"Categories in parental level of education variable:  \", end=\" \")\n",
-    "print(df['parental level of education'].unique())"
+    "print(df['parental_level_of_education'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -535,20 +535,20 @@
    ],
    "source": [
     "print(\"Categories in test preparation course variable:  \", end=\" \")\n",
-    "print(df['test preparation course'].unique())"
+    "print(df['test_preparation_course'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We have 3 numerical features : ['math score', 'reading score', 'writing score']\n",
-      "We have 5 categorical features : ['gender', 'race/ethnicity', 'parental level of education', 'lunch', 'test preparation course']\n"
+      "We have 3 numerical features : ['math_score', 'reading_score', 'writing_score']\n",
+      "We have 5 categorical features : ['gender', 'race_ethnicity', 'parental_level_of_education', 'lunch', 'test_preparation_course']\n"
      ]
     }
    ],
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -595,14 +595,14 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>gender</th>\n",
-       "      <th>race/ethnicity</th>\n",
-       "      <th>parental level of education</th>\n",
+       "      <th>race_ethnicity</th>\n",
+       "      <th>parental_level_of_education</th>\n",
        "      <th>lunch</th>\n",
-       "      <th>test preparation course</th>\n",
-       "      <th>math score</th>\n",
-       "      <th>reading score</th>\n",
-       "      <th>writing score</th>\n",
-       "      <th>total score</th>\n",
+       "      <th>test_preparation_course</th>\n",
+       "      <th>math_score</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>writing_score</th>\n",
+       "      <th>total_score</th>\n",
        "      <th>average</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -677,21 +677,21 @@
        "</div>"
       ],
       "text/plain": [
-       "   gender race/ethnicity parental level of education         lunch  \\\n",
+       "   gender race_ethnicity parental_level_of_education         lunch  \\\n",
        "0  female        group B           bachelor's degree      standard   \n",
        "1  female        group C                some college      standard   \n",
        "2  female        group B             master's degree      standard   \n",
        "3    male        group A          associate's degree  free/reduced   \n",
        "4    male        group C                some college      standard   \n",
        "\n",
-       "  test preparation course  math score  reading score  writing score  \\\n",
+       "  test_preparation_course  math_score  reading_score  writing_score  \\\n",
        "0                    none          72             72             74   \n",
        "1               completed          69             90             88   \n",
        "2                    none          90             95             93   \n",
        "3                    none          47             57             44   \n",
        "4                    none          76             78             75   \n",
        "\n",
-       "   total score    average  \n",
+       "   total_score    average  \n",
        "0          218  72.666667  \n",
        "1          247  82.333333  \n",
        "2          278  92.666667  \n",
@@ -699,14 +699,14 @@
        "4          229  76.333333  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['total score'] = df['math score'] + df['reading score'] + df['writing score']\n",
-    "df['average'] = df['total score']/3\n",
+    "df['total_score'] = df['math_score'] + df['reading_score'] + df['writing_score']\n",
+    "df['average'] = df['total_score']/3\n",
     "df.head()"
    ]
   },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -733,9 +733,9 @@
     }
    ],
    "source": [
-    "reading_full = df[df['reading score'] == 100]['average'].count()\n",
-    "writing_full = df[df['writing score'] == 100]['average'].count()\n",
-    "math_full = df[df['math score'] == 100]['average'].count()\n",
+    "reading_full = df[df['reading_score'] == 100]['average'].count()\n",
+    "writing_full = df[df['writing_score'] == 100]['average'].count()\n",
+    "math_full = df[df['math_score'] == 100]['average'].count()\n",
     "\n",
     "print(f'Number of students with full marks in Maths: {math_full}')\n",
     "print(f'Number of students with full marks in Writing: {writing_full}')\n",
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -758,9 +758,9 @@
     }
    ],
    "source": [
-    "reading_less_20 = df[df['reading score'] <= 20]['average'].count()\n",
-    "writing_less_20 = df[df['writing score'] <= 20]['average'].count()\n",
-    "math_less_20 = df[df['math score'] <= 20]['average'].count()\n",
+    "reading_less_20 = df[df['reading_score'] <= 20]['average'].count()\n",
+    "writing_less_20 = df[df['writing_score'] <= 20]['average'].count()\n",
+    "math_less_20 = df[df['math_score'] <= 20]['average'].count()\n",
     "\n",
     "print(f'Number of students with less than 20 marks in Maths: {math_less_20}')\n",
     "print(f'Number of students with less than 20 marks in Writing: {writing_less_20}')\n",
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
